--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,65 @@
 /* FONT
 ================================================== */
 @font-face {
-  font-family: 'fontello';
-  src: url('../fonts/fontello.eot?37927580');
-  src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?37927580') format('woff2'),
-       url('../fonts/fontello.woff?37927580') format('woff'),
-       url('../fonts/fontello.ttf?37927580') format('truetype'),
-       url('../fonts/fontello.svg?37927580#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'fontello';
+    src: url('../fonts/fontello.eot?37927580');
+    src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
+        url('../fonts/fontello.woff2?37927580') format('woff2'),
+        url('../fonts/fontello.woff?37927580') format('woff'),
+        url('../fonts/fontello.ttf?37927580') format('truetype'),
+        url('../fonts/fontello.svg?37927580#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1em;
-  margin-left: .2em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1em;
+    margin-left: .2em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
- 
-.icon-twitter:before { content: '\f099'; } /* '' */
-.icon-facebook:before { content: '\f09a'; } /* '' */
-.icon-gplus:before { content: '\f0d5'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-up:before { content: '\f176'; } /* '' */
+
+.icon-twitter:before {
+    content: '\f099';
+}
+
+/* '' */
+.icon-facebook:before {
+    content: '\f09a';
+}
+
+/* '' */
+.icon-gplus:before {
+    content: '\f0d5';
+}
+
+/* '' */
+.icon-linkedin:before {
+    content: '\f0e1';
+}
+
+/* '' */
+.icon-linkedin:before {
+    content: '\f0e1';
+}
+
+/* '' */
+.icon-up:before {
+    content: '\f176';
+}
+
+/* '' */
 
 /* CUSTOM RESETS
 ================================================== */
@@ -57,7 +81,7 @@ h4 {
     font-size: 30px;
 }
 
-/* Buttons */ 
+/* Buttons */
 .btn {
     min-width: 145px;
     line-height: 50px;
@@ -81,7 +105,7 @@ h4 {
 .btn-border {
     background-color: transparent;
     color: #212121;
-    border: 1px solid #212121; 
+    border: 1px solid #212121;
 }
 
 .btn-fill:hover,
@@ -100,11 +124,11 @@ h4 {
     border: 0;
     border-bottom: 1px solid #212121;
     border-radius: 0;
-    background-color: transparent; 
+    background-color: transparent;
     box-shadow: none;
     outline: 0 none transparent;
-    -webkit-appearance:none;
- }
+    -webkit-appearance: none;
+}
 
 textarea {
     margin-top: 40px;
@@ -167,7 +191,7 @@ html, body {
 }
 
 /* Navigation */
-.navbar-nav > li > a {
+.navbar-nav>li>a {
     padding: 5px 0;
     font-weight: 600;
     color: #212121;
@@ -184,26 +208,26 @@ html, body {
     margin-right: 0;
 }
 
-.navbar-nav > li + li > a {
+.navbar-nav>li+li>a {
     margin-left: 40px;
 }
 
-.navbar-nav > li > a:hover,
-.navbar-nav > li.active > a,
-.nav > li > a:hover,
-.nav > li.active > a {
+.navbar-nav>li>a:hover,
+.navbar-nav>li.active>a,
+.nav>li>a:hover,
+.nav>li.active>a {
     background-color: transparent;
     border-bottom: 2px solid #212121;
 }
 
-.nav > li > a:focus {
+.nav>li>a:focus {
     background-color: transparent;
 }
 
 /* HERO
 ================================================== */
-.hero { 
-    background: url(../img/hero.jpg) no-repeat center / cover; 
+.hero {
+    background: url(../img/hero.jpg) no-repeat center / cover;
     height: 100%;
     width: 100%;
     min-height: 700px;
@@ -243,7 +267,7 @@ html, body {
     font-size: 22px;
     margin-bottom: 30px;
     line-height: 1;
-} 
+}
 
 .hero img {
     height: 600px;
@@ -257,9 +281,10 @@ html, body {
     background-color: #fff;
     z-index: 1;
 }
+
 /* site-section */
 .site-section {
-   padding-top: 120px;
+    padding-top: 120px;
 }
 
 .site-section h2,
@@ -282,7 +307,7 @@ html, body {
     padding-bottom: 120px;
 }
 
-.skill + .skill {
+.skill+.skill {
     margin-top: 50px;
 }
 
@@ -301,7 +326,7 @@ html, body {
 }
 
 .progress-bar {
-    background-color: #212121;  
+    background-color: #212121;
 }
 
 /* Section: Services */
@@ -314,7 +339,7 @@ html, body {
     content: '';
     background: url(../img/services-bg.jpg) no-repeat fixed center / cover;
     width: 100%;
-    height: 400px; 
+    height: 400px;
     position: absolute;
     left: 0;
     top: 0;
@@ -323,9 +348,9 @@ html, body {
 .overlay:after {
     content: '';
     width: 100%;
-    height: 400px; 
+    height: 400px;
     position: absolute;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     top: 0;
     left: 0;
     z-index: 0;
@@ -380,8 +405,8 @@ html, body {
     -ms-transition: background-color 0.25s ease-in-out;
 }
 
-.portfolio-item:hover:before{
-    background-color: rgba(33,33,33,0.6);
+.portfolio-item:hover:before {
+    background-color: rgba(33, 33, 33, 0.6);
 }
 
 .portfolio-item-info {
@@ -491,7 +516,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .section-counters h4 {
@@ -535,12 +560,12 @@ html, body {
     border-radius: 50%;
 }
 
-.icon + .icon {
+.icon+.icon {
     margin-left: 5px;
 }
 
 .icon i:before {
-    margin:0;
+    margin: 0;
 }
 
 .icon:hover {
@@ -555,11 +580,25 @@ html, body {
     -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 }
 
-a.twitter-bg:hover {color: #55acee;}
-a.facebook-bg:hover{color: #3b5998;}
-a.gplus-bg:hover{color: #007bb5;} 
-a.linkedin-bg:hover {color: #dd4b39;}
-a.icon-up-bg:hover {color: #212121;}
+a.twitter-bg:hover {
+    color: #55acee;
+}
+
+a.facebook-bg:hover {
+    color: #3b5998;
+}
+
+a.gplus-bg:hover {
+    color: #007bb5;
+}
+
+a.linkedin-bg:hover {
+    color: #dd4b39;
+}
+
+a.icon-up-bg:hover {
+    color: #212121;
+}
 
 .copyright {
     margin-bottom: 0;
