--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h4 {
     padding: 0 30px;
     font-size: 16px;
     font-weight: 600;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     border-radius: 0;
     transition: box-shadow 0.25s ease-in-out;
     -moz-transition: box-shadow 0.25s ease-in-out;
@@ -260,7 +260,6 @@ html, body {
     font-size: 46px;
     font-weight: 700;
     margin: 0 0 15px;
-    text-transform: uppercase;
 }
 
 .job-title {
