--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@
 }
 
 [class^="icon-"]:before, [class*="icon-"]:before {
-    font-family: "fontello";
+    /* font-family: "fontello"; */
+    font-family: fontawesome_;
     font-style: normal;
     font-weight: normal;
     speak-as: none;
@@ -547,7 +548,7 @@ html, body {
     bottom: 0;
     padding: 30px 0;
     width: 100%;
-    background-color: #212121;
+    background-color: #b3afaf;
     z-index: -1;
 }
 
