--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,12 +532,20 @@ html, body {
     padding-bottom: 120px;
 }
 
+
+.section-form .container {
+    padding: 80px 0px;
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0px 0px 40px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
 .section-form .btn {
     margin-top: 40px;
 }
 
-/* FOOTER
-================================================== */
+/* FOOTER  */
 .site-footer {
     position: fixed;
     bottom: 0;
