--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url('./variables.css');
 @import url('./footer.css');
 
-@font-face {
+/* @font-face {
     font-family: 'fontello';
     src: url('../fonts/fontello.eot?37927580');
     src: url('../fonts/fontello.eot?37927580#iefix') format('embedded-opentype'),
@@ -12,11 +12,19 @@
         url('../fonts/fontello.svg?37927580#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
+} */
+
+@font-face {
+    font-family: 'fontello';
+    src: url('../fonts/Montserrat-Regular.ttf');
+}
+
+html, * {
+    font-family: 'fontello' !important;
 }
 
 [class^="icon-"]:before, [class*="icon-"]:before {
     font-family: "fontello";
-    /* font-family: fontawesome_; */
     font-style: normal;
     font-weight: normal;
     speak-as: none;
