sending to repos

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -37,6 +37,8 @@
     --name-top-13-duration: 0.75s;
     --name-top-14-duration: 1.6s;
 
+    --border-radius-portfolio: 30px;
+
 
     --footer-delay-1: 1.2s;
     /* 5.2s */
