--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,7 @@ html, body {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
+    border-radius: var(--border-radius-portfolio);
 }
 
 .visible-xxs {
@@ -389,6 +390,7 @@ html, body {
     height: 280px;
     margin-bottom: 30px;
     position: relative;
+
 }
 
 .section-portfolio .col-md-4:nth-last-child(-n+3) .portfolio-item {
@@ -408,11 +410,14 @@ html, body {
     -webkit-transition: background-color 0.25s ease-in-out;
     -o-transition: background-color 0.25s ease-in-out;
     -ms-transition: background-color 0.25s ease-in-out;
+
+    border-radius: var(--border-radius-portfolio);
 }
 
 .portfolio-item:hover:before {
     background-color: rgba(33, 33, 33, 0.6);
 }
+
 
 .portfolio-item-info {
     position: absolute;
@@ -454,6 +459,7 @@ html, body {
 .portfolio-item-info a:hover {
     color: #212121;
     background-color: #fff;
+
 }
 
 .section-portfolio .btn {
@@ -591,31 +597,4 @@ html, body {
     -webkit-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
     -o-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
     -ms-transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
-}
-
-a.twitter-bg:hover {
-    color: #55acee;
-}
-
-a.facebook-bg:hover {
-    color: #3b5998;
-}
-
-a.gplus-bg:hover {
-    color: #007bb5;
-}
-
-a.linkedin-bg:hover {
-    color: #dd4b39;
-}
-
-a.icon-up-bg:hover {
-    color: #212121;
-}
-
-.copyright {
-    margin-bottom: 0;
-    line-height: 40px;
-    color: #fff;
-    text-align: center;
 }
