--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,7 +415,8 @@ html, body {
 }
 
 .portfolio-item:hover:before {
-    background-color: rgba(33, 33, 33, 0.6);
+    /* background-color: rgba(33, 33, 33, 0.6); */
+    background-color: rgba(70, 68, 68, 0.6);
 }
 
 
@@ -472,7 +473,8 @@ html, body {
 }
 
 .modal-content {
-    border-radius: 0;
+    /* border-radius: 0; */
+    border-radius: var(--border-radius-portfolio);
     box-shadow: 0px 0px 40px 8px rgba(0, 0, 0, 0.2);
 }
 
