--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,17 +3,17 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-touch-callout: none;
     list-style: none;
-}
 
-.brands {
+    
     text-decoration: none !important;
     border: 0;
-    margin: 0 40px 0 0;
+    margin: 0 20px 0 0;
     padding: 0;
-
+    
     width: 40px;
-
-    background-color: #fff;
+    
+    background-color: transparent;
+    /* background-color: red; */
 }
 
 .brands:before {
@@ -25,7 +25,7 @@
     transition: all 0.5s ease-in-out;
 
 
-    border: solid 1.5px var(--smoke2);
+    /* border: solid 1.5px var(--smoke2); */
     font-size: 2em;
 
     /* margin-top: 2.3rem; */
@@ -40,7 +40,7 @@
     text-decoration: none !important;
 }
 
-.brands:hover:before {
+.brands a:hover:before {
 
     background-color: rgb(89, 139, 155);
     color: var(--light) ip !important;
